--- a/production/helm/loki/templates/pdb.yaml
+++ b/production/helm/loki/templates/pdb.yaml
@@ -3,15 +3,11 @@ apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "loki.fullname" . }}
-  namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "loki.name" . }}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
-    chart: {{ template "loki.chart" . }}
+    {{- include "loki.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
-      app: {{ template "loki.name" . }}
+      {{- include "loki.selectorLabels" . | nindent 6 }}
 {{ toYaml .Values.podDisruptionBudget | indent 2 }}
 {{- end -}}
