--- a/production/helm/loki/templates/networkpolicy.yaml
+++ b/production/helm/loki/templates/networkpolicy.yaml
@@ -3,24 +3,17 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: {{ template "loki.fullname" . }}
-  namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "loki.name" . }}
-    chart: {{ template "loki.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "loki.labels" . | nindent 4 }}
 spec:
   podSelector:
     matchLabels:
-      name: {{ template "loki.fullname" . }}
-      app: {{ template "loki.name" . }}
-      release: {{ .Release.Name }}
+      {{- include "loki.selectorLabels" . | nindent 6 }}
   ingress:
     - from:
       - podSelector:
           matchLabels:
-            app: {{ template "client.name" . }}
-            release: {{ .Release.Name }}
+            {{- include "loki.selectorLabels" . | nindent 12 }}
     - ports:
       - port: {{ .Values.service.port }}
 {{- end -}}
