--- a/production/helm/loki/templates/podsecuritypolicy.yaml
+++ b/production/helm/loki/templates/podsecuritypolicy.yaml
@@ -3,12 +3,8 @@ apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
   name: {{ template "loki.fullname" . }}
-  namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "loki.name" . }}
-    chart: {{ template "loki.chart" . }}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
+    {{- include "loki.labels" . | nindent 4 }}
 spec:
   privileged: false
   allowPrivilegeEscalation: false
