--- a/production/helm/loki/templates/service.yaml
+++ b/production/helm/loki/templates/service.yaml
@@ -1,40 +1,26 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "loki.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  name: {{ include "loki.fullname" . }}
   labels:
-    app: {{ template "loki.name" . }}
-    chart: {{ template "loki.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "loki.labels" . | nindent 4 }}
     {{- with .Values.service.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
   annotations:
-    {{- toYaml .Values.service.annotations | nindent 4 }}
+    {{- toYaml .Values.service.annotations | nindent 4 }}    
 spec:
   type: {{ .Values.service.type }}
-{{- if (and (eq .Values.service.type "ClusterIP") (not (empty .Values.service.clusterIP))) }}
-  clusterIP: {{ .Values.service.clusterIP }}
-{{- end }}
-{{- if .Values.service.loadBalancerSourceRanges }}
-  loadBalancerSourceRanges:
-  {{- range $cidr := .Values.service.loadBalancerSourceRanges }}
-    - {{ $cidr }}
-  {{- end }}
-{{- end }}
   ports:
     - port: {{ .Values.service.port }}
+      targetPort: http-metrics
       protocol: TCP
       name: http-metrics
-      targetPort: http-metrics
 {{- if (and (eq .Values.service.type "NodePort") (not (empty .Values.service.nodePort))) }}
       nodePort: {{ .Values.service.nodePort }}
 {{- end }}
 {{- if .Values.extraPorts }}
 {{ toYaml .Values.extraPorts | indent 4}}
-{{- end }}
+{{- end }}      
   selector:
-    app: {{ template "loki.name" . }}
-    release: {{ .Release.Name }}
+    {{- include "loki.selectorLabels" . | nindent 4 }}
